Reflect manuscript revision

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -22,14 +22,14 @@
    "outputs": [],
    "source": [
     "# occurrence of animals in each tale type\n",
-    "animals = pd.read_csv('./data/animals_checked.tsv', sep='\\t')\n",
+    "animals = pd.read_csv('data/animals_checked.tsv', sep='\\t')\n",
     "\n",
     "# dictionary to convert some animal names into several categories(see \"the occurrence of animals\" section in the main paper)\n",
-    "animal_code = pd.read_csv('./data/animal_code.tsv', sep='\\t', header=None)\n",
+    "animal_code = pd.read_csv('data/animal_code.tsv', sep='\\t', header=None)\n",
     "animal_dict = {row[0]:row[1] for i,row in animal_code.iterrows()}\n",
     "\n",
     "# list of substituional pairs in each tale types(see \"the co-occurrence of animals\" section in the main paper)\n",
-    "alternatives = pd.read_csv('./data/alternatives_checked.tsv', sep='\\t')\n",
+    "alternatives = pd.read_csv('data/alternatives_checked.tsv', sep='\\t')\n",
     "\n",
     "# tale categories(e.g. wild, wild and human)\n",
     "categories = {row['atu_id'] :[row['category']] for i,row in pd.read_csv('data/categories_atu.tsv', sep='\\t').iterrows()}"
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "382"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "Name: 0, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2772,9 +2772,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "palgrave2019",
    "language": "python",
-   "name": "python3"
+   "name": "palgrave2019"
   },
   "language_info": {
    "codemirror_mode": {
